# OpenMP_Exercises

./: .gitignore  CMakeLists.txt  README.md
Exercise1/: Readme.md  serial_vec_add.c  serial_vec_add.cpp
Exercise2/: matrix_add.c  matrix_add.f90  matrix_add_dyn.cpp
Exercise3/: serial_saxpy.c  serial_saxpy.cpp  serial_saxpy.f90
Exercise4/: serial_pi.c  serial_pi.cpp
Project/: laplace2d.c  laplace2d.cpp
Project_Solution/: laplace2d.c  laplace2d.cpp
SIMD-Exercise1/: mat_prod.c  mat_prod.cpp  mat_prod.f90  mat_prod.hpp
SIMD-Exercise2/: pi_value.c  pi_value.cpp  pi_value.f90
SIMD-Solution1/: mat_prod.c  mat_prod.cpp  mat_prod.f90  mat_prod.hpp
SIMD-Solution1/Transposed_version/: mat_prod.cpp  mat_prod.hpp
SIMD-Solution2/: pi_value.c  pi_value.cpp  pi_value.f90
Solution1/: omp_vec_add_parallel.c  omp_vec_add_parallel.cpp  omp_vec_add_parallel_for.c  omp_vec_add_parallel_for.cpp  omp_vec_add_parallel_mw.c  omp_vec_add_parallel_mw.cpp
Solution2/: matrix_add.c  matrix_add.f90  matrix_add_dyn.cpp
Solution3/Step1/: omp_saxpy.cpp  saxpy.c  saxpy.f90
Solution3/Step2/: omp_saxpy.cpp  saxpy.c  saxpy.f90
Solution3/Vec_add_dynamic/: vec_add.f90
Solution3/Vec_add_guided/: vec_add.f90
Solution3/Vec_add_static/: vec_add.f90
Solution4/Step1/: pi_critical.c  pi_critical.cpp  pi_critical.f90
Solution4/Step2/: pi_atomic.c  pi_atomic.cpp  pi_atomic.f90
Solution4/Step3/: pi_reduction.c  pi_reduction.cpp  pi_reduction.f90
